--- a/src/app/components/readings/readings.component.scss
+++ b/src/app/components/readings/readings.component.scss
@@ -9,14 +9,14 @@
   grid-gap: 3rem;
 }
 
-.reader-section {
-  display: flex;
-  flex-direction: column;
+// .reader-section {
+//   display: flex;
+//   flex-direction: column;
 
-  .reader-section__reader {
-    margin-bottom: 1.5rem;  
-  }
-}
+//   .reader-section__reader {
+//     margin-bottom: 1.5rem;  
+//   }
+// }
 
 /* Small Screens */
 @media (max-width: 560px) {
