--- a/src/app/components/reading-detail/reading-detail.component.html
+++ b/src/app/components/reading-detail/reading-detail.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div *ngIf="!!reading">
   <div class="heading heading-bottom-margin">Reading Space</div>
 
   <div [@fade-in]="currentState">
@@ -33,16 +33,16 @@
             <span>{{ reading.book.published | date | defaultValue }}</span>
           </div>
           <mat-form-field *ngIf="isOwner">
-              <mat-select (selectionChange)="changeStatus($event.value)" placeholder="Privacy" [(ngModel)]="reading.status" name="status">
-                <mat-option *ngFor="let status of statuses" [value]="status">
-                  {{status}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+            <mat-select (selectionChange)="changeStatus($event.value)" placeholder="Privacy" [(ngModel)]="reading.status" name="status">
+              <mat-option *ngFor="let status of statuses" [value]="status">
+                {{status}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
 
         <div *ngIf="isOwner" class="reading-header__controls">
-            <i (click)="deleteReading.emit(reading)" class="far fa-trash-alt"></i>
+          <i (click)="deleteReading.emit(reading)" class="far fa-trash-alt"></i>
         </div>
       </div>
 
