--- a/src/app/components/reading-detail/reading-detail.component.scss
+++ b/src/app/components/reading-detail/reading-detail.component.scss
@@ -10,42 +10,42 @@
   background: transparent;
 }
 
-@mixin left-margin {
-  margin-left: 1rem;
-}
+// @mixin left-margin {
+//   margin-left: 1rem;
+// }
 
-.posting {
-  padding: 10px;
-  margin-bottom: 1.5rem;
-  border-left: 1.5px sandybrown solid;
+// .posting {
+//   padding: 10px;
+//   margin-bottom: 1.5rem;
+//   border-left: 1.5px sandybrown solid;
 
-  .posting__quote {
-    font-style: oblique;   
-    border-left: 0.2px solid;
-    padding-left: 1.2rem;
-    margin-top: 1rem;
-  }
+//   .posting__quote {
+//     font-style: oblique;   
+//     border-left: 0.2px solid;
+//     padding-left: 1.2rem;
+//     margin-top: 1rem;
+//   }
 
-  .posting__note,
-  .posting__quote {
-    white-space: pre-wrap;
-    @include left-margin;
-  }
+//   .posting__note,
+//   .posting__quote {
+//     white-space: pre-wrap;
+//     @include left-margin;
+//   }
 
-  label {
-    @include left-margin;
-  }
-}
+//   label {
+//     @include left-margin;
+//   }
+// }
 
-.posted-date {
-  font-size: 0.7rem;
-}
+// .posted-date {
+//   font-size: 0.7rem;
+// }
 
-.quote-info {
-  margin-top: 1rem;
-  display: flex;
-  justify-content: space-between;
-}
+// .quote-info {
+//   margin-top: 1rem;
+//   display: flex;
+//   justify-content: space-between;
+// }
 
 .reading-header {
   display: flex;
@@ -71,10 +71,10 @@
 }
 
 .reading-header__controls {
-  // display: flex;
   margin-left: 1rem;
-  // flex-direction: column-reverse;
 }
+
+//TODO duplicate styles
 
 textarea[name="quote"] {
   font-style: oblique;
