--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,10 @@ a {
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
 
+.small-font {
+  font-size: 0.7rem;
+}
+
 .margin-b0ttom {
   margin-bottom: 1rem;
 }
