--- a/src/app/components/reading-detail/reading-detail.component.scss
+++ b/src/app/components/reading-detail/reading-detail.component.scss
@@ -37,21 +37,21 @@
 
 //TODO duplicate styles
 
-textarea[name="quote"] {
-  font-style: oblique;
-}
+// textarea[name="quote"] {
+//   font-style: oblique;
+// }
 
-textarea {
-  padding: 0.5rem;
-  font-size: 1.2rem;
-  display: block;
-  width: 85%;
-  border-radius: 3px;
-  margin: 1rem;
-  margin-top: 0.4rem;
+// textarea {
+//   padding: 0.5rem;
+//   font-size: 1.2rem;
+//   display: block;
+//   width: 85%;
+//   border-radius: 3px;
+//   margin: 1rem;
+//   margin-top: 0.4rem;
 
   
-}
+// }
 
 
 /* Small Screens */
